--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
           <!-- skills 1-->
           <div class="skills__content">
             <div class="skills__info">
-
               <div class="skills__data">
                 <div class="skills__blob">
                   <img src="./img/html-1.svg" alt="" />
@@ -271,7 +270,7 @@
                 </div>
 
                 <h3 class="skills__name">Nest JS</h3>
-                <span class="skills__subtitle">Advanced</span>
+                <span class="skills__subtitle">Intermediate</span>
               </div>
 
               <div class="skills__data">
@@ -344,7 +343,9 @@
 
               <div>
                 <h3 class="qualification__name">Frontend Developer</h3>
-                <span class="qualification__country">Bukhara - Shift Academy</span>
+                <span class="qualification__country"
+                  >Bukhara - Shift Academy</span
+                >
                 <span class="qualification__year">2022-...</span>
               </div>
 
@@ -371,7 +372,9 @@
 
                 <div>
                   <span class="projects__subtitle">Web</span>
-                  <h1 class="projects__title">Searches for users from the github site</h1>
+                  <h1 class="projects__title">
+                    Searches for users from the github site
+                  </h1>
                   <a
                     target="_blank"
                     href="https://serach-github.vercel.app/"
