--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h1 class="projects__title">
-                    Searches for users from the github site
+                    Searches for github site
                   </h1>
                   <a
                     target="_blank"
